<resources>
    <string name="app_name">Notie</string>
    <string name="all_notes">All Notes</string>
    <string name="reminders">Reminders</string>
    <string name="labels">Labels</string>
    <string name="archives">Archives</string>
    <string name="trash">Trash</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>